# aioplatega

./: .buildinfo  .pre-commit-config.yaml  LICENSE  Makefile  README.md  README.rst  genindex.html  getting-started.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  getting-started.doctree  index.doctree
.doctrees/api/: client.doctree  enums.doctree  exceptions.doctree  index.doctree  methods.doctree  types.doctree
.github/workflows/: docs.yml  pypi-release.yml  tests.yml
_modules/: index.html
_modules/aioplatega/client/: platega.html
_modules/aioplatega/enums/: payment_method_int.html  payment_status.html
_modules/aioplatega/exceptions/: base.html
_modules/aioplatega/methods/: base.html  create_transaction.html  get_conversions.html  get_rate.html  get_transaction_status.html
_modules/aioplatega/types/: base.html  callback_payload.html  conversion_item.html  conversions_response.html  create_transaction_request.html  create_transaction_response.html  payment_details.html  rate_response.html  transaction_status_response.html
_sources/: getting-started.md.txt  index.rst.txt
_sources/api/: client.rst.txt  exceptions.rst.txt  index.rst.txt  types.rst.txt
_static/: custom.css
aioplatega/: __init__.py
aioplatega/client/: __init__.py  platega.py
aioplatega/enums/: __init__.py  payment_method_int.py  payment_status.py
aioplatega/exceptions/: __init__.py  base.py
aioplatega/methods/: __init__.py  base.py  create_transaction.py  get_conversions.py  get_rate.py  get_transaction_status.py
aioplatega/session/: __init__.py  aiohttp.py  base.py
aioplatega/types/: __init__.py  base.py  callback_payload.py  conversion_item.py  conversions_response.py  create_transaction_request.py  create_transaction_response.py  payment_details.py  rate_response.py  transaction_status_response.py
api/: client.html  enums.html  exceptions.html  index.html  methods.html  types.html
docs/: conf.py
docs/_static/: custom.js
docs/api/: enums.rst  methods.rst
scripts/: bump_version.py
tests/: conftest.py  test_client.py  test_enums.py  test_exceptions.py  test_methods.py  test_session.py  test_types.py
